force-app/main/default/objects/Integration_Log__c/fields/Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>Request_JSON__c</fullName>
    <description>Defines the request (in JSON format) that was sent during the callout.</description>
    <inlineHelpText>Defines the request (in JSON format) that was sent during the callout.</inlineHelpText>
    <label>Request JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>