force-app/main/default/objects/Integration_Log__c/fields/Retry__c.field-meta.xml
<CustomField>
    <fullName>Retry__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Describes the number of retries after first failure.</description>
    <inlineHelpText>Describes the number of retries after first failure.</inlineHelpText>
    <label>Retry</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>