force-app/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Defines the status of the returned response during the callout</description>
    <inlineHelpText>Defines the status of the returned response during the callout</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>FAILURE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>