force-app/main/default/objects/Integration_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Describes the status code for the response.</description>
    <inlineHelpText>Describes the status code for the response.</inlineHelpText>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>