force-app/main/default/objects/Integration_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Describes the Callout event name.</description>
    <inlineHelpText>Describes the Callout event name.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AML</fullName>
            </value>
            <value>
                <fullName>Person Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>